--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "prettier": "^3.2.1",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "^3.4.1"
+  },
+  "dependencies": {
+    "@glidejs/glide": "^3.6.0"
   }
 }
